--- a/src/components/chat/components/item/index.css
+++ b/src/components/chat/components/item/index.css
@@ -10,7 +10,7 @@
 .chat-item {
   cursor: pointer;
 
-  &.active {
+  &[data-active="true"] {
     background-color: var(--background-color);
   }
 
