--- a/src/components/chat/components/header/index.css
+++ b/src/components/chat/components/header/index.css
@@ -4,7 +4,8 @@
   width: 100%;
   height: 54px;
   border-bottom: 1px solid var(--secondary-color);
-  &.empty > * {
+
+  &[data-empty] > * {
     display: none;
   }
 
