--- a/src/components/chat/components/message/index.css
+++ b/src/components/chat/components/message/index.css
@@ -1,6 +1,6 @@
 .message {
-  margin-bottom: 10px;
   display: flex;
+  margin-bottom: 10px;
 
   &[thisUser] {
     justify-content: flex-end;
@@ -10,33 +10,33 @@
     margin-top: 20px;
   }
 
-  &[date1]:before {
-    content: attr(date);
+  &[date1]::before {
+    position: absolute;
+    width: 100px;
+    margin: 20 auto;
     color: var(--black-color);
+    color: var(--grey-color);
     font-size: 12px;
     line-height: 12px;
     text-align: center;
-    color: var(--grey-color);
-    width: 100px;
-    margin: 20 auto;
-    position: absolute;
+    content: attr(date);
   }
 
   /*  conteiner  */
 
   &__container {
-    background-color: var(--second-background-color);
-    border-radius: 12px;
     width: 402px;
     overflow: hidden;
+    background-color: var(--second-background-color);
+    border-radius: 12px;
     @nest .message[thisUser] & {
       background-color: var(--background-color);
     }
   }
 
   &[hasmedia] &__container {
-    max-width: 402px;
     position: relative;
+    max-width: 402px;
   }
 
   &:not([hasContent])&__container {
@@ -47,12 +47,12 @@
   /* text */
 
   &__content {
+    position: relative;
+    padding: 8px;
     color: var(--text-color);
     font-weight: 500;
     font-size: 12px;
     line-height: 15px;
-    padding: 8px;
-    position: relative;
   }
 
   /* image */
@@ -63,49 +63,49 @@
 
   /* time floating */
 
-  &__time:before {
+  &__time::before {
     @nest .message[thisUser] & {
       content: "\2713";
     }
   }
 
   &[hasMedia] &__time {
-    margin: auto;
-    margin-right: 0;
     position: relative;
     bottom: 20px;
     width: 70px;
+    margin: auto;
+    margin-right: 0;
     text-align: center;
 
     & .date {
-      padding: 0;
       margin-right: 8px;
       margin-bottom: 4px;
-      background-color: var(--grey-color);
-      border-radius: 5px;
+      padding: 0;
       padding: 2px;
       color: white;
+      background-color: var(--grey-color);
+      border-radius: 5px;
     }
   }
 
   &:not([hasMedia]) &__time {
     display: flex;
-    padding-bottom: 8px;
-    padding-right: 8px;
-    float: right;
-    height: 100%;
     flex-direction: column;
     justify-content: flex-end;
+    float: right;
+    height: 100%;
+    padding-right: 8px;
+    padding-bottom: 8px;
     shape-outside: inset(calc(100% - 22px) 25% 25%);
   }
 
   /* first of the day  */
 
   .message__firstOfTheDay {
-    display: inline-block;
     position: absolute;
+    display: inline-block;
     width: 100%;
-    text-align: center;
     margin-top: -20px;
+    text-align: center;
   }
 }
