--- a/static/public/index.css
+++ b/static/public/index.css
@@ -1,23 +1,21 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
-@import './variables.css';
+@import "https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap";
+@import "./variables.css";
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 html,
 body {
-  padding: 0;
   margin: 0;
+  padding: 0;
   overflow-x: hidden;
-}
-
-#root {
-  font-family: "Inter";
+  font-weight: normal;
+  font-size: 16px;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: 500;
 }
 
 textarea:focus,
