--- a/src/components/avatar/index.css
+++ b/src/components/avatar/index.css
@@ -3,9 +3,9 @@
   height: 40px;
   background-color: var(--secondary-color);
   border-radius: 50%;
+}
 
-  & > image {
-    width: 40px;
-    height: 40px;
-  }
+.avatar > image {
+  width: 40px;
+  height: 40px;
 }
