--- a/src/components/chat/components/item/components/unread-count/index.css
+++ b/src/components/chat/components/item/components/unread-count/index.css
@@ -1,20 +1,18 @@
-.chat-item {
-  &__unread-count {
-    display: flex;
-    flex-shrink: 0;
-    align-items: center;
-    justify-content: center;
-    width: 20px;
-    height: 20px;
-    margin-left: auto;
-    color: var(--white-color);
-    font-size: 11px;
-    line-height: 12px;
-    background-color: var(--main-color);
-    border-radius: 50%;
+.chat-item__unread-count {
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  margin-left: auto;
+  color: var(--white-color);
+  font-size: 11px;
+  line-height: 12px;
+  background-color: var(--main-color);
+  border-radius: 50%;
+}
 
-    &.hidden {
-      display: none;
-    }
-  }
+.chat-item__unread-count.hidden {
+  display: none;
 }
