--- a/src/components/chat/components/header/index.css
+++ b/src/components/chat/components/header/index.css
@@ -4,20 +4,19 @@
   width: 100%;
   height: 54px;
   border-bottom: 1px solid var(--secondary-color);
+}
 
-  &[data-empty] > * {
-    display: none;
-  }
+.chat-header[data-empty] > * {
+  display: none;
+}
 
-  &__title {
-    margin-left: 10px;
-  }
+.chat-header__title {
+  margin-left: 10px;
+}
 
-  &__menu {
-    width: 25px;
-    height: 25px;
-    margin: 0;
-    margin-left: auto;
-    background: url("/static/public/images/ellipsis-vertical-solid.svg") no-repeat 50%;
-  }
+.chat-header__menu {
+  width: 25px;
+  height: 25px;
+  margin: 0 0 0 auto;
+  background: url("/static/public/images/ellipsis-vertical-solid.svg") 50% no-repeat;
 }
