--- a/src/components/chat/components/messages/index.css
+++ b/src/components/chat/components/messages/index.css
@@ -2,15 +2,15 @@
   height: 100%;
   padding: 15px 0;
   overflow-y: auto;
+}
 
-  &-preloader {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+.chat__messages-preloader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
 
-    &.hidden {
-      display: none;
-    }
-  }
+.chat__messages-preloader.hidden {
+  display: none;
 }
