--- a/src/components/form/components/control/index.css
+++ b/src/components/form/components/control/index.css
@@ -5,8 +5,8 @@
   font-size: 13px;
   line-height: 13px;
   border: 0;
+}
 
-  &:focus::placeholder {
-    color: transparent;
-  }
+.form__control:focus::placeholder {
+  color: #0000;
 }
