--- a/src/components/form/components/group/index.css
+++ b/src/components/form/components/group/index.css
@@ -3,14 +3,14 @@
   min-height: 39px;
   margin-bottom: 16px;
   border-bottom: 1px solid var(--main-color);
+}
 
-  &::after {
-    display: block;
-    margin-bottom: -10px;
-    padding-top: 2px;
-    color: red;
-    font-size: 8px;
-    line-height: 8px;
-    content: attr(data-error);
-  }
+.form__group::after {
+  display: block;
+  margin-bottom: -10px;
+  padding-top: 2px;
+  color: red;
+  font-size: 8px;
+  line-height: 8px;
+  content: attr(data-error);
 }
