--- a/src/components/avatar/index.css
+++ b/src/components/avatar/index.css
@@ -9,3 +9,16 @@
   width: 40px;
   height: 40px;
 }
+
+.user-profile__avatar:hover {
+  background-color: rgb(0 0 0 / 20%);
+  cursor: pointer;
+}
+
+.user-profile__avatar:hover::after {
+  position: relative;
+  top: 45px;
+  color: var(--white-color);
+  font-size: 16px;
+  content: "Поменять  аватар";
+}
