--- a/src/components/avatar/index.css
+++ b/src/components/avatar/index.css
@@ -2,12 +2,8 @@
   width: 40px;
   height: 40px;
   background-color: var(--secondary-color);
+  background-size: cover;
   border-radius: 50%;
-}
-
-.avatar > image {
-  width: 40px;
-  height: 40px;
 }
 
 .user-profile__avatar:hover {
