--- a/src/public/index.css
+++ b/src/public/index.css
@@ -1,5 +1,5 @@
-@import "https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap";
-@import "./variables.css";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
+@import url("./variables.css");
 
 * {
   box-sizing: border-box;
